# tui-meta-editor

./: .gitignore  README.md  __init__.py  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
media/: __init__.py  metadata.py  renamer.py  scaner.py  scanner.py
media_organizer/: __init__.py  __main__.py  config.py  logging_config.py  models.py  protocols.py
media_organizer/core/: __init__.py  metadata.py  renamer.py  scanner.py
media_organizer/editors/: __init__.py  mkv_editor.py  mp4_editor.py
media_organizer/ui/: __init__.py  gui.py
tests/: __init__.py  conftest.py  test_config.py  test_gui.py  test_logging_config.py  test_main.py  test_metadata.py  test_mkv_editor.py  test_models.py  test_mp4_editor.py  test_renamer.py  test_scanner.py
ui/: __init__.py  tui.py
