[project]
name = "media-organizer"
version = "0.3.0"
description = "A tool to organize media files by renaming and updating metadata"
authors = [{name = "Timothy A. DeWees"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "mutagen>=1.47.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
mediaedit = "media_organizer.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["media_organizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["media_organizer"]
omit = [
    "media_organizer/ui/gui.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
]
